some new projections added

--- a/test.html
+++ b/test.html
@@ -18,6 +18,9 @@
         <select id="projectionselect">
             <option value="orthogonal" selected>Orthogonal</option>
             <option value="equirectangular">Equirectangular</option>
+            <option value="azimuthal-equidistant">Azimuthal equidistant</option>
+            <option value="gnomonic">Gnomonic</option>
+            <option value="lambert">Lambert equal-area</option>
         </select>
         </p>
         <input type="button" id="erase" value="ERASE" />
