new projections added, holes in polygons, linestrings

--- a/test.html
+++ b/test.html
@@ -18,6 +18,8 @@
         <select id="projectionselect">
             <option value="orthogonal" selected>Orthogonal</option>
             <option value="equirectangular">Equirectangular</option>
+            <option value="mercator">Mercator</option>
+            <option value="gall">Gall</option>
             <option value="azimuthal-equidistant">Azimuthal equidistant</option>
             <option value="gnomonic">Gnomonic</option>
             <option value="lambert">Lambert equal-area</option>
@@ -25,7 +27,7 @@
         </p>
         <input type="button" id="erase" value="ERASE" />
         <p>
-        Z,X and arrows to move
+        Z,X and arrows to move, 0 to center to Cracow
         </p>
     </div>
   </body>
